--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "@flaticon/flaticon-uicons": "^3.3.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "moongoose": "^0.0.1"
+    "moongoose": "^0.0.1",
+    "react-flaticons": "^1.1.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.6"
