--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "@types/node": "^22.7.4",
+    "nodemon": "^3.1.6"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -21,6 +22,6 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.4"
+    "mongoose": "^8.6.3"
   }
 }
