--- a/backend/questions_service/package.json
+++ b/backend/questions_service/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "install": "^0.13.0",
-    "mongoose": "^8.6.3"
+    "mongoose": "^8.6.3",
+    "axios": "^1.7.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.6"
