--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.30"
+    "@types/jquery": "^3.5.30",
+    "tailwindcss": "^3.4.14"
   }
 }
